<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/exoplayer_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>
</FrameLayout>

    <TextView
        android:id="@+id/recipe_detail_instruction_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

</LinearLayout>